2005-05-11  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: allow V1 root crt.

2005-05-06  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, lftp_ssl.h: fixes compilation with openssl; add instance
	  to openssl code; improve temp error handling for gnutls.
	* commands.cc: improve version info.

2005-05-05  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, lftp_ssl.h: verify peer certificate chain with gnutls;
	  load CA and CRL globally; gnutls debugging support.
	* lftp.cc: deinit ssl.
	* resource.cc: ssl:*-path are only available with openssl.

2005-04-29  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc, HttpDirXML.cc: replace atoll with sscanf.
	* GetJob.cc: do expand_home_relative on output file name.
	* Filter.cc, PtyShell.cc: fix gcc4 warning.
	* Makefile.am: add gnutls support.
	* buffer_ssl.cc: use ssl->error member.
	* lftp_ssl.cc, lftp_ssl.h: implement basic gnutls support.

2005-04-29  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, buffer_ssl.cc, buffer_ssl.h, ftpclass.cc, ftpclass.h,
	  lftp_ssl.cc, lftp_ssl.h, misc.cc, misc.h: prepare for gnutls
	  usage - make lftp_ssl class.

2005-04-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: (data_address_ok) don't return false if no checking
	  needed and getpeername fails; send CLNT before LANG and OPTS UTF8.

2005-04-11  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: resume recv_buf in Close, this fixes a rare hang.

2005-04-07  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SFtpListInfo::Do) check if done first, this fixes
	  looping in SMTask::Roll.

2005-04-06  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: retry with LONG_LIST in case of any error with MP_LIST.
	* MirrorJob.cc: don't let parent mirror act in between our actions;
	  let other tasks run when ListInfo are created, this fixes mirror
	  multitasking when using listings from cache.

2005-04-05  Alexander V. Lukyanov <lav@yars.free.net>
